[GStreamer][MediaStream] Stream collection fixes https://bugs.webkit.org/show_bug.cgi?id=274825

Reviewed by Xabier Rodriguez-Calvar.

Our MediaStream source element answers to GST_QUERY_SELECTABLE queries but until this patch it
wasn't sending collection events on its pad(s). It still worked by luck in GStreamer versions older
than 1.25/1.26, decodebin3 would still create a parsebin internally.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcEnsureStreamCollection):
(webkitMediaStreamSrcPostStreamCollection):
(webkitMediaStreamSrcAddPad):
(webkitMediaStreamSrcPadProbeCb):
(webkitMediaStreamSrcAddTrack):
(ProbeData::ProbeData): Deleted.

Canonical link: https://commits.webkit.org/279570@main